feat: /status/recomFeeRate added
