# src/routes/status.network.route.ts
@@ -1,5 +1,5 @@
 import { Request, Response, Router } from "express";
-import { getPrice, getFeeRate } from "../utils/mempool";
+import { getPrice, getFeeRate, getRecommendedFeeRate } from "../utils/mempool";
 import networkConfig from "../config/network.config";
 
 // Create a new instance of the Express Router
@@ -30,6 +30,23 @@ StatusNetworkRoute.get(
     async (req: Request, res: Response) => {
         try {
             const response = await getFeeRate(networkConfig.networkType);
+            return res.status(200).send(response);
+        } catch (error: any) {
+            console.error(error);
+            return res.status(400).send({ error });
+        }
+    }
+);
+
+
+// @route    GET api/status/recomFeeRate
+// @desc     Get Recommended Fee Rate
+// @access   Public
+StatusNetworkRoute.get(
+    "/recomFeeRate",
+    async (req: Request, res: Response) => {
+        try {
+            const response = await getRecommendedFeeRate(networkConfig.networkType);
             return res.status(200).send(response);
         } catch (error: any) {
             console.error(error);
